[post] fix for conventions

--- a/docs/programming/concurrent-programming/10. Decomposition - Data.md
+++ b/docs/programming/concurrent-programming/10. Decomposition - Data.md
@@ -189,19 +189,19 @@ using Summary = std::unordered_map<int, int>;
 
 class ThreadPool {
 public:
-    ThreadPool(size_t numThreads) : mStop(false) {
+    ThreadPool(size_t numThreads) : m_Stop(false) {
         for (size_t i = 0; i < numThreads; ++i) {
-            mWorkers.emplace_back([this] {
+            m_Workers.emplace_back([this] {
                 while (true) {
                     std::function<void()> task;
                     {
-                        std::unique_lock<std::mutex> lk(mQueueMutex);
-                        mConditionVariable.wait(lk, [this] { return mStop || !mTasks.empty(); });
-                        if (mStop && mTasks.empty()) {
+                        std::unique_lock<std::mutex> lk(m_QueueMutex);
+                        m_CV.wait(lk, [this] { return m_Stop || !m_Tasks.empty(); });
+                        if (m_Stop && m_Tasks.empty()) {
                             return;
                         }
-                        task = std::move(mTasks.front());
-                        mTasks.pop();
+                        task = std::move(m_Tasks.front());
+                        m_Tasks.pop();
                     }
                     task();
                 }
@@ -211,11 +211,11 @@ public:
 
     ~ThreadPool() {
         {
-            std::unique_lock<std::mutex> lk(mQueueMutex);
-            mStop = true;
+            std::unique_lock<std::mutex> lk(m_QueueMutex);
+            m_Stop = true;
         }
-        mConditionVariable.notify_all();
-        for (std::thread& worker : mWorkers) {
+        m_CV.notify_all();
+        for (std::thread& worker : m_Workers) {
             worker.join();
         }
     }
@@ -223,21 +223,21 @@ public:
     template <class Func, class... Args>
     void Enqueue(Func&& f, Args&&... args) {
         {
-            std::unique_lock<std::mutex> lk(mQueueMutex);
-            if (mStop) {
+            std::unique_lock<std::mutex> lk(m_QueueMutex);
+            if (m_Stop) {
                 throw std::runtime_error("Enqueue stopped");
             }
-            mTasks.emplace(std::bind(std::forward<Func>(f), std::forward<Args>(args)...));
+            m_Tasks.emplace(std::bind(std::forward<Func>(f), std::forward<Args>(args)...));
         }
-        mConditionVariable.notify_one();
+        m_CV.notify_one();
     }
 
 private:
-    std::vector<std::thread> mWorkers;
-    std::queue<std::function<void()>> mTasks;
-    std::mutex mQueueMutex;
-    std::condition_variable mConditionVariable;
-    bool mStop;
+    std::vector<std::thread> m_Workers;
+    std::queue<std::function<void()>> m_Tasks;
+    std::mutex m_QueueMutex;
+    std::condition_variable m_CV;
+    bool m_Stop;
 };
 
 Summary ProcessPile(const std::vector<int>& pile) {
@@ -319,9 +319,9 @@ int main() {
 
     std::random_device randDevice;
     std::mt19937 gen(randDevice());
-    std::uniform_int_distribution<> distrib(1, numCandidates);
+    std::uniform_int_distribution<> uniformDist(1, numCandidates);
 
-    std::generate(pile.begin(), pile.end(), [&]() { return distrib(gen); });
+    std::generate(pile.begin(), pile.end(), [&]() { return uniformDist(gen); });
 
     Summary counts = VoteUp(pile);
 
