[feat] change the introduction -> Computer architecture

--- a/docs/programming/concurrent-programming/02. Multitasking.md
+++ b/docs/programming/concurrent-programming/02. Multitasking.md
@@ -4,16 +4,12 @@ title: 02. Multitasking
 parent: Concurrent Programming
 tags: 
   - concurrent programming
-  - synchronization
-  - asynchronous programming
-  - C++
-  - C
-  - python
+  - Operating System
 ---
 
 # Multitasking
 
-Multitasking is a broad concept that encompasses both multiprocessing and multithreading as specific implementations to achieve concurrent execution of tasks.
+Multitasking is a broad concept that encompasses both multiprocessing and multithreading as specific implementations to achieve concurrent execution of tasks. Actually, I will put some OS related stuffs in this post later.
 
 <details open markdown="block">
   <summary>
@@ -67,7 +63,7 @@ In cooperative multitasking, tasks voluntarily yield control to the scheduler, a
 ### Task Isolation
 Task isolation ensures that tasks operate independently without interfering with each other. Modern OSs achieve this through virtual memory, memory protection, and separate address spaces. For example, processes run in isolated memory spaces, while threads within a process share memory but synchronize access to avoid concurrency issues. Isolation enhances security and stability, preventing crashes in one task from affecting others.
 
-### Task Scheduling
+### Task Scheduling (CPU Scheduling)
 Task scheduling determines how the OS allocates CPU time to tasks. Common algorithms include:
 - Round Robin: Tasks execute in fixed time slices.
 - Priority-Based: Higher-priority tasks run first.
