--- a/docs/programming/concurrent-programming/03. Multiprocessing.md
+++ b/docs/programming/concurrent-programming/03. Multiprocessing.md
@@ -29,30 +29,25 @@ A **process** is a program in execution. A process is not just a program (space 
 
 ## More on Processes
 
-A process's space is the allocated memory. This memory includes the code of the program, the data using for the program, and the stack. Here, the stack is used to store the state of the process, such as the values of the registers and the program counter
-
+A process's space is the allocated memory. This memory includes the code of the program, the data using for the program, and the stack. Here, the stack is used to store the state of the process, such as the values of the registers (ex. program counter)
 
 In terms of time aspect, the time includes the process **waiting** time for its running, process **running** time, and its **waiting I/O** time.
 
-
 These aspects of a process are closely related. The allocated memory of a process influences its execution time, and vice versa.
 
-## What is in a Process
+## Memory space in Process
 
-1. Process ID (PID)
-2. Process State
-3. Executable (Binary)
-4. Files
-5. Address space
-6. Registers
-7. Stack
-8. Heap
-9. Data Segment
-10. Process Control Block (PCB)
+1. Stack
+2. Heap
+3. Data Segment
+4. Code
+5. Process Control Block (PCB - In kernel)
+    1. Process ID (PID)
+    2. Register Values
+    3. Process State
+    4. CPU Schedule Information
+    5. Memory Information (Base-register, limit-register and page table)
 
-
-> **PCB**    
-> PCB is a data structure maintained by the OS that stores all the information about a process (including all the items listed above).  The PCB is how the OS manages and keeps track of processes.
 
 ## States of a Process
 
@@ -72,10 +67,10 @@ terminated["Terminated"]
 
 %% Define transitions
 new -->|Admitted to execution| ready
-ready -->|Gets CPU execution| running
-running -->|Loses CPU execution| ready
-running -->|Waits for event| wait
-wait -->|Event occurs| ready
+ready -->|Gets CPU execution, dispatch| running
+running -->|Loses CPU execution, timer interrupt| ready
+running -->|Waits for event| wait(blocked)
+wait(blocked) -->|Event occurs| ready
 running -->|Process completes| zombie
 zombie -->|Parent process ends| terminated
 
@@ -83,7 +78,7 @@ zombie -->|Parent process ends| terminated
 subgraph Active States
     ready
     running
-    wait
+    wait(blocked)
 end
 
 ```
@@ -99,6 +94,17 @@ A process can create child processes through OS system calls, this is known as s
 Child processes are independent forks of the main process. Each child process isolated in terms of memory address space.
 
 As operating system controls this isolation, a direct access of instructions and data among the processes is not allowed.
+
+### Other POSIX Process system calls
+
+ - fork()
+ - execve()
+ - exit()
+ - waitpid()
+
+`execve()` is a system call that also makes a new process, however, it actually replace the process on the current process.
+`exit()` is a system call for exitting process.
+`waitpid()` is a system call for waiting the termination of children's process.
 
 
 ## Examples of Multiprocessing
