[post] synchronization intro

--- a/docs/programming/concurrent-programming/10. Decomposition - Data.md
+++ b/docs/programming/concurrent-programming/10. Decomposition - Data.md
@@ -18,6 +18,15 @@ tags:
 
 Data decomposition is achieved by dividing the data / works into chunks properly. However, we've already trained these decomposition alot. Generally, we could use loop, fork-join, threadpool, map and reduce patterns (solely or combined).
 
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  {: .text-delta }
+- . TOC
+{:toc}
+</details>
+
 ## Loop-level parallelism
 
 Loop-level parallelism is distributing independent interactions of a loop accross multiple tasks. We've done this a lot in the beginning of introducing multithreading or multiprocessing.
